# EAMOto

./: .gitignore  CMakeLists.txt  README.md  akış.md  files.md  install.sh  needs.md  plan.md  proje.md  task.md
include/: auth.hpp  config.hpp  cookie.hpp  utils.hpp
src/: auth.cpp  config.cpp  cookie.cpp  main.cpp  utils.cpp
